argonaut-configs/_onetimesetup/egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-routing
  namespace: istio-system
spec:
  hosts:
    - httpbin.com
  exportTo:
    - "*"
  gateways:
    - mesh
    - istio-egressgateway
  http:
    - match:
        - port: 80
          gateways:
            - mesh
      route:
        - destination:
            host: istio-egressgateway.istio-system.svc.cluster.local
    - match:
        - port: 80
          gateways:
            - istio-egressgateway
      route:
        - destination:
            host: httpbin.com
