argonaut-configs/_onetimesetup/ingress.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: myappname
spec:
  selector:
    app: myappname
    # istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "."
    # - port:
    #     number: 443
    #     name: https
    #     protocol: HTTPS
    #   hosts:
    #     - "*"
    #   tls:
    #     mode: SIMPLE
    #     credentialName: helloworld-credential # either this or cert and key
    #     serverCertificate: /etc/certs/server.pem
    #     privateKey: /etc/certs/privatekey.pem
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myappname
spec:
  hosts:
    - "*"
  gateways:
    - myappname
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 80
            host: myappname.dev.svc.cluster.local
