argonaut-configs/_onetimesetup/kiali-ingress.yaml
---
# Source: argonaut-configs/templates/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: "kiali-ingress"
spec:
  hosts:
    - "*"
  gateways:
    - "kiali-ingress"
  exportTo:
    - "*"
  http:
    - match:
        - uri:
            prefix: /kiali
      route:
        - destination:
            port:
              number: 20001
            host: kiali.istio-system.svc.cluster.local
            # host: "myappname.dev.svc.cluster.local"
---

---
# Source: argonaut-configs/templates/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: "kiali-ingress"
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        name: http-kiali
        protocol: http
        number: 80
      hosts:
        - "*"
---
# apiVersion: networking.istio.io/v1alpha3
# kind: Gateway
# metadata:
#   name: argocd-gateway
# spec:
#   selector:
#     istio: ingressgateway # use istio default ingress gateway
#   servers:
#     - port:
#         number: 80
#         name: http-argocd
#         protocol: HTTP
#       hosts:
#         - "*"
#       tls:
#         httpsRedirect: true
#     - port:
#         number: 443
#         name: https-argocd
#         protocol: HTTPS
#       tls:
#         mode: SIMPLE
#         credentialName: ingress-for-istio # must be the same as secret
#       hosts:
#         - "*"

# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: argocd-server
# spec:
#   hosts:
#     - "*"
#   gateways:
#     - argocd-gateway
#   tls:
#     - match:
#         - port: 443
#           sniHosts:
#             - "*"
#       route:
#         - destination:
#             host: argocd-server.argocd.svc.cluster.local
# ---
# ---
# # Source: argonaut-configs/templates/externalservice.yaml
# apiVersion: networking.istio.io/v1alpha3
# kind: ServiceEntry
# metadata:
#   name: "rds-mysql-external"
#   labels:
#     heritage: "Helm"
#     release: "RELEASE-NAME"
#     chart: "argonaut-configs"
# spec:
#   hosts:
#     - database-1.co45pjczxgry.us-east-2.rds.amazonaws.com
#   ports:
#     - name: mysql
#       protocol: TCP
#       number: 3306
#   resolution: NONE # DNS
#   location: MESH_EXTERNAL
